Fixed unsightly gap on top of homepage

--- a/app/assets/stylesheets/ui/_contain.scss
+++ b/app/assets/stylesheets/ui/_contain.scss
@@ -1,7 +1,7 @@
 %container {
 	margin: 0 auto;
 	position: relative;
-	padding: 1em;
+	padding: 0 1em 1em 1em;
 }
 
 .container--site {
